test/e2e/testdata/httproute-backend-filter.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-changed
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend-changed
      backendRefs:
        - kind: Service
          name: infra-backend-v2
          port: 8080
          filters:
            - type: ResponseHeaderModifier
              responseHeaderModifier:
                add:
                  - name: my-added-header
                    value: added-value
